# graphicus-harena

./: Makefile  README.md
CanvaGL/: CMakeLists.txt  main.cpp  teapot_main.cpp  verlet_main.cpp
CanvaGL/shaders/: fragment.glsl  gouraud_vertex.glsl  line.vs  mirror.fs  mirror.vs  plane.fs  plane.vs  ripple.vs  skybox.fs  skybox.vs  vertex.glsl
CanvaGL/source/: camera.h  cuboid.h  fileutils.h  graphicalobject.h  grid.h  line.h  scene.h  shader.cpp  shader.h  skybox.h  texturedplane.h  utils.h
CanvaGL/source/2d/: Rectangle.h
CanvaGL/source/cloth/: constraint.h  particle.h
CanvaGL/source/meshreader/: modelgraphicalobject.h  modelreader.h  modelreaderfactory.h  objreader.h
CanvaGL/test/unit/: cuboidplaneintersectiontest.cpp  objreadertest.cpp
Cuboid/: CMakeLists.txt  main.cpp  utils.py
Cuboid/shaders/: line.vs  vertex.glsl
Cuboid/source/: camera.cpp  camera.h  cuboid.h  fileutils.h  graphicalobject.h  line.h  shader.cpp  shader.h
Hello Triangle/: CMakeLists.txt  main.cpp  readme.md
Hello Triangle/header/: camera.h
Hello Triangle/source/: camera.cpp  camera.h
Terrain Rendering/: CMakeLists.txt  main.cpp  readme.md
Terrain Rendering/shaders/: fragment.glsl  vertex.glsl
Terrain Rendering/source/: array2d.cpp  array2d.h  camera.cpp  camera.h  fileutils.h  fractalterrain.h  math_utils.h  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  texture.h
frame captures/: empty window.rdc
misc/include/: contextmanager.h  preprocessing.h
misc/src/: application.cpp
src/: contextmanager.cpp
